--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,6 @@ html
 	body
 		nav.navbar.navbar-default
 			.container-fluid
-				// Brand and toggle get grouped for better mobile display
 				.navbar-header
 					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
 						span.sr-only Toggle navigation
@@ -16,7 +15,7 @@ html
 						span.icon-bar
 					a.navbar-brand(href='/') IST 440W Group 3
 				#bs-example-navbar-collapse-1.collapse.navbar-collapse
-					ul.nav.navbar-nav
+					ul.nav.navbar-nav.pull-right
 						li
 							a(href='/login') Login
 						li
