Work done to login/register/dashboard/logout
Testing and making sure that login was testing not just username, but password as well, which is working now. Logout now clears the session and any cookies that are associated with it. Dashboard is only accessible if a session is active and the session params correspond to data in the database. Register is still functioning as usual.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,10 @@
 doctype html
-html
+html(ng-app='clientportal')
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
-	body
+	body(ng-controller='main')
 		nav.navbar.navbar-default
 			.container-fluid
 				.navbar-header
@@ -19,9 +19,14 @@ html
 						li
 							a(href='/login') Login
 						li
+							a(href='/dashboard') User Dash
+						li
 							a(href='/register') Register
+						li
+							a.btn(href='/logout') Logout
 		block content
 
 		script(src='javascripts/jquery.js')
 		script(src='javascripts/bootstrap.js')
 		script(src='javascripts/angular.js')
+		script(src='javascripts/clientportal.js')
