minor edits to tab hide/show and register page

--- a/views/register.jade
+++ b/views/register.jade
@@ -28,6 +28,6 @@ block content
 								.form-group
 									label Confirm Password
 									.input-group
-									input.form-control(type='password', placeholder='Password', ng-model='userData.passConf', name='passConf', required='')
+									input.form-control(type='password', placeholder='Password', ng-model='userData.passconf', name='passconf', required='')
 								.row.center-text
 									button.btn.btn-success.btn-block(type='submit') Register
