--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html(ng-app='clientportal')
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body(ng-controller='main')
-		nav.navbar.navbar-default
+		nav.navbar.navbar-default.navbar-fixed-top
 			.container-fluid
 				.navbar-header
 					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
@@ -18,7 +18,7 @@ html(ng-app='clientportal')
 					ul.nav.navbar-nav.pull-right
 						li(ng-hide="getLocation() == 'authorized=true'")
 							a(href='/login') Login
-						li
+						li(ng-show="getLocation() == 'authorized=true'")
 							a(href='/dashboard') User Dash
 						li(ng-hide="getLocation() == 'authorized=true'")
 							a(href='/register') Register
