--- a/views/register.jade
+++ b/views/register.jade
@@ -18,6 +18,11 @@ block content
 									.input-group
 									input.form-control(type='text', placeholder='Last Name', ng-model='userData.lname', name='lname', required='')
 								.form-group
+									select.form-control(name='useraccess', ng-model='userData.useraccess', required='')
+										option(value='')
+										option(value='100') User
+										option(value='400') Admin
+								.form-group
 									label Email
 									.input-group
 									input.form-control(type='email', placeholder='Email Address', ng-model='userData.email', name='email', required='')
