--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -1,10 +1,10 @@
 doctype html
-html
+html(ng-app='clientportal')
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
-	body
+	body(ng-controller='main')
 		nav.navbar.navbar-default.navbar-fixed-top
 			.container-fluid
 				.navbar-header
@@ -17,11 +17,12 @@ html
 				#bs-example-navbar-collapse-1.collapse.navbar-collapse
 					ul.nav.navbar-nav.pull-right
 						li
-							a(href='/login') Login
+							a(href='/dashboard') User Dash
 						li
-							a(href='/register') Register
+							a.btn(href='/logout') Logout
 		block content
 
 		script(src='javascripts/jquery.js')
 		script(src='javascripts/bootstrap.js')
 		script(src='javascripts/angular.js')
+		script(src='javascripts/clientportal.js')
