--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px;
+  /* padding: 50px;*/
+  font-family: "Lato", Helvetica, Arial, sans-serif; /*"Lucida Grande"*/
 }
 
 a {
