--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,27 +1,25 @@
 doctype html
 html
-	head
-		title= title
-		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
-	body
-		nav.navbar.navbar-default.navbar-fixed-top
-			.container-fluid
-				.navbar-header
-					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-						span.sr-only Toggle navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					a.navbar-brand(href='/') IST 440W Group 3
-				#bs-example-navbar-collapse-1.collapse.navbar-collapse
-					ul.nav.navbar-nav.pull-right
-						li
-							a(href='/login') Login
-						li
-							a(href='/register') Register
-		block content
+  head
+    title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/index.css')
+  body
+    nav
+      ul.myNav
+        li
+          a(href='/') IST 440W Group 3
+        li
+          a(href='#b') Home
+        li
+          a(href='#c') About
+        li
+          a(href='/login') Login
+        li
+          a(href='/register') Register
+    block content
 
-		script(src='javascripts/jquery.js')
-		script(src='javascripts/bootstrap.js')
-		script(src='javascripts/angular.js')
+    script(src='javascripts/jquery.js')
+    script(src='javascripts/bootstrap.js')
+    script(src='javascripts/angular.js')
