--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -3,23 +3,39 @@ extends loggedinlayout
 
 block content
 	center 
-		h1= "Welcome, " + user.firstName + " " + user.lastName + "!"
+		h1= "Welcome, " + userdata.firstname + " " + userdata.lastname + "!"
 	.container-fluid
 		.row
-			ul.nav.nav-tabs
-				li.active(role='presentation')
-					a(data-toggle="tab", href='#profilepage') User Profile
-				li(role='presentation')
-					a(data-toggle="tab", href='#appointments') Appointments
-				li(role='presentation')
-					a(data-toggle="tab", href='#reports') Reports
-			.tab-content
-				#profilepage.tab-pane.fade.in.active
-					h3 User Profile
-					p Profile content
-				#appointments.tab-pane.fade
-					h3 Appointments
-					p Appointment content
-				#reports.tab-pane.fade
-					h3 Reports
-					p Reports content
+			.col-sm-2
+				ul.nav.nav-pills.nav-stacked
+					li.active(role='presentation')
+						a(data-toggle="tab", href='#profilepage') User Profile
+					li(role='presentation')
+						a(data-toggle="tab", href='#medicines') Medicines
+					li(role='presentation')
+						a(data-toggle="tab", href='#appointments') Appointments
+					li(role='presentation')
+						a(data-toggle="tab", href='#reports') Reports
+			.col-sm-10
+				.tab-content
+					#profilepage.tab-pane.fade.in.active
+						.col-sm-12
+							.col-sm-8.col-sm-offset-2
+								.form-group
+									.input-group
+										span.input-group-addon Email:
+										input.form-control(type='text', value='#{userdata.email}', readonly)
+								.form-group
+									.input-group
+										span.input-group-addon Address:
+										input.form-control(type='text', value='#{userdata.address[0].streetaddress + " " + userdata.address[0].city + ", " + userdata.address[0].state+ " " + userdata.address[0].zip}', readonly)
+								.form-group
+									.input-group
+										span.input-group-addon Phone Number:
+										input.form-control(type='text', value='#{userdata.phone}', readonly)
+					#medicines.tab-pane.fade
+						p Medicine content
+					#appointments.tab-pane.fade
+						p Appointment content
+					#reports.tab-pane.fade
+						p Reports content
