--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,18 +8,18 @@ html
 		nav.navbar.navbar-default.navbar-fixed-top
 			.container-fluid
 				.navbar-header
-					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', aria-expanded='false')
 						span.sr-only Toggle navigation
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
 					a.navbar-brand(href='/') IST 440W Group 3
-				#bs-example-navbar-collapse-1.collapse.navbar-collapse
+				.collapse.navbar-collapse
 					ul.nav.navbar-nav.pull-right
 						li
 							a(href='/login') Login
-						li
-							a(href='/register') Register
+						//- li
+						//- a(href='/register') Register
 		block content
 
 		script(src='javascripts/jquery.js')
