--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,45 @@
 body {
-  padding: 50px;
+  background: url("../images/header.png");
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.table thead > tr > th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #000000;
+}
+
+.table-striped > tbody > tr:nth-child(odd) > td {
+    background-color: rgba(53, 163, 197, 0.2);
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    color: #ffffff;
+    background-color: #35A3C5;
+}
+
+.nav > li > a:hover {
+    color: white;
+    background-color: #A1B4BA;
+}
+
+.nav-pills > li > a {
+    color: #ffffff;
+}
+
+.btn-440w {
+    color: white;
+    background-color: #35A3C5;
+}
+
+.btn-440w:hover {
+    color: white;
+    background-color: #A1B4BA;
+}
+
+.p-t {
+    padding-top: 3em;
+}
+
+.p-t-b-h {
+    padding-top: 1.8em;
 }
