--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,40 +2,59 @@
 extends loggedinlayout
 
 block content
+	.p-t
 	center 
 		h1= "Welcome, " + userdata.firstname + " " + userdata.lastname + "!"
-	.container-fluid
+	.container
 		.row
 			.col-sm-2
 				ul.nav.nav-pills.nav-stacked
 					li.active(role='presentation')
 						a(data-toggle="tab", href='#profilepage') User Profile
 					li(role='presentation')
+						a(data-toggle="tab", href='#appointments') Appointments
+					li(role='presentation')
 						a(data-toggle="tab", href='#medicines') Medicines
 					li(role='presentation')
-						a(data-toggle="tab", href='#appointments') Appointments
+						a(data-toggle="tab", href='#allergies') Allergies
 					li(role='presentation')
 						a(data-toggle="tab", href='#reports') Reports
 			.col-sm-10
 				.tab-content
 					#profilepage.tab-pane.fade.in.active
 						.col-sm-12
-							.col-sm-8.col-sm-offset-2
-								.form-group
-									.input-group
-										span.input-group-addon Email:
-										input.form-control(type='text', value='#{userdata.email}', readonly)
-								.form-group
-									.input-group
-										span.input-group-addon Address:
-										input.form-control(type='text', value='#{userdata.address[0].streetaddress + " " + userdata.address[0].city + ", " + userdata.address[0].state+ " " + userdata.address[0].zip}', readonly)
-								.form-group
-									.input-group
-										span.input-group-addon Phone Number:
-										input.form-control(type='text', value='#{userdata.phone}', readonly)
-					#medicines.tab-pane.fade
-						p Medicine content
+							.form-group
+								.input-group
+									span.input-group-addon Email:
+									input.form-control(type='text', value='#{userdata.email}', readonly)
+							.form-group
+								.input-group
+									span.input-group-addon Address:
+									input.form-control(type='text', value='#{userdata.address[0].streetaddress + " " + userdata.address[0].city + ", " + userdata.address[0].state+ " " + userdata.address[0].zip}', readonly)
+							.form-group
+								.input-group
+									span.input-group-addon Phone Number:
+									input.form-control(type='text', value='#{userdata.phone}', readonly)
 					#appointments.tab-pane.fade
-						p Appointment content
+						.col-sm-12
+							.col-sm-9
+								h2 Appointments
+							.col-sm-3(class="p-t-b-h")
+								a(class="btn btn-440w") Request New Appointment
+						.col-sm-12
+						table(class="table table-striped")
+							thead
+								tr 
+									th Date
+									th Time
+									th Doctor
+									th Description
+							tbody
+								tr(ng-repeat='data in userAppointments')
+									td {{data.date}}
+									td {{data.time}}
+									td {{data.doctor}}
+									td {{data.description}}
+					#medicines.tab-pane.fade
+					#allergies.tab-pane.fade
 					#reports.tab-pane.fade
-						p Reports content
