--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,25 +1,23 @@
 doctype html
 html
 	head
-		title= title
+		title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/index.css')
 	body
-		nav.navbar.navbar-default.navbar-fixed-top
-			.container-fluid
-				.navbar-header
-					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', aria-expanded='false')
-						span.sr-only Toggle navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					a.navbar-brand(href='/') IST 440W Group 3
-				.collapse.navbar-collapse
-					ul.nav.navbar-nav.pull-right
-						li
-							a(href='/login') Login
-						//- li
-						//- a(href='/register') Register
+		nav
+			ul.myNav
+				li
+					a(href='/') IST 440W Group 3
+				li
+					a(href='#b') Home
+				li
+					a(href='#c') About
+				li
+					a(href='/login') Login
+				//- li
+				//- 	a(href='/register') Register
 		block content
 
 		script(src='javascripts/jquery.js')
