--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -5,7 +5,7 @@ html(ng-app="clientportal")
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/index.css')
-	body(ng-controller="main")
+	body(ng-controller="main").swag
 		nav
 			ul.myNav
 				li
@@ -20,4 +20,6 @@ html(ng-app="clientportal")
 		script(src='javascripts/jquery.js')
 		script(src='javascripts/bootstrap.js')
 		script(src='javascripts/angular.js')
+		script(src='javascripts/ui-bootstrap.js')
+		script(src='javascripts/ui-bootstrap-tpls.js')
 		script(src='javascripts/clientportal.js')
