--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,24 @@
 body {
-  background: url("../images/header.png");
+  /*background: url("../images/header.png");*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+body.swag {
+  background: url("../images/header.png");
+}
+
+.modal-backdrop.in {
+    opacity: 0.8;
+}
+
+.panel.panel-default.cards {
+    height: 10em;
+    border-color: #35A3C5;
+}
+
+.panel-default > .panel-heading {
+    background-color: #35A3C5;
+    border-color: #35A3C5;
 }
 
 .table thead > tr > th {
