--- a/views/index.jade
+++ b/views/index.jade
@@ -9,40 +9,92 @@ block content
 	.myWrapper
 		.mainInfo
 			.mainContent
-				h1 Test1
 				p
-					| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					| Nunc vehicula metus vitae purus efficitur, eu laoreet mauris euismod.
-					| Proin vel congue sem. Quisque suscipit justo sit amet orci luctus, posuere maximus tortor sodales.
+					img(src="../images/icons/healthy.svg")
+				p
+					| Be able to request appointments and check up on your health
 			.mainContent
-				h1 Test2
 				p
-					| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					| Nunc vehicula metus vitae purus efficitur, eu laoreet mauris euismod.
-					| Proin vel congue sem. Quisque suscipit justo sit amet orci luctus, posuere maximus tortor sodales.
+					img(src="../images/icons/medical-1.svg")
+				p
+					| See all your history and data in one centralized place, including medication, immunizations, etc.
 			.mainContent
-				h1 Test3
 				p
-					| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					| Nunc vehicula metus vitae purus efficitur, eu laoreet mauris euismod.
-					| Proin vel congue sem. Quisque suscipit justo sit amet orci luctus, posuere maximus tortor sodales.
+					img(src="../images/icons/technology.svg")
+				p
+					| Secure access to your personal records
 
 
 	.secondContent
 		.myWrapper
 			.secondDiv
-				figure
-					img(src='../images/work-min.jpg')
-					figcaption something cool
-			.secondDiv
-				h1 We take your medical records blah blah
+				h2 We take your health seriously
 				p
-					| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					| Nunc vehicula metus vitae purus efficitur, eu laoreet mauris euismod.
-					| Proin vel congue sem. Quisque suscipit justo sit amet orci luctus, posuere maximus tortor sodales.
-
+					| Manage your personal medical records, communicate with your doctors and make more informed decisions about your health. 
+					| This patient portal allows you to view and manage lab orders, test results and upcoming appointments from any internet enabled device. 
+					| Exchange messages with your provider and conveniently request prescription refills. 
 	.contactUS
 		.myWrapper
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Ryan
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Baha
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Charles
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Rahul
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Abigail
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+			.col-sm-4
+				figure.snip1336
+					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
+					figcaption
+						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
+						h2 
+							| Amy
+							span Engineer
+					p
+						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
 
 	.footer
 		.myWrapper
