--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/index.css')
+		link(rel='stylesheet', href='/stylesheets/cards.css')
 	body
 		nav
 			ul.myNav
