--- a/public/javascripts/template/appointment.modal.tpl.html
+++ b/public/javascripts/template/appointment.modal.tpl.html
@@ -7,49 +7,33 @@
 	<form action="/requestAppointment" , method="post">
 		<div class="form-horizontal">
 			<div class="form-group">
-				<div class="col-sm-12">
-					<div class="col-sm-2">
-						<label class="control-label">
-							Date
-						</label>
-					</div>
-					<div class="col-sm-10">
+				<div class="col-sm-12 input-group">
+					<label class="col-sm-3 control-label">Date</label>
+					<div class="col-sm-9">
 						<input class="form-control" type="text">
 					</div>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-12">
-					<div class="col-sm-2">
-						<label class="control-label">
-							Time
-						</label>
-					</div>
-					<div class="col-sm-10">
+				<div class="col-sm-12 input-group">
+					<label class="col-sm-3 control-label">Time</label>
+					<div class="col-sm-9">
 						<input class="form-control" type="text">
 					</div>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-12">
-					<div class="col-sm-2">
-						<label class="control-label">
-							Doctor
-						</label>
-					</div>
-					<div class="col-sm-10">
+				<div class="col-sm-12 input-group">
+					<label class="col-sm-3 control-label">Doctor</label>
+					<div class="col-sm-9">
 						<input class="form-control" type="text">
 					</div>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-12">
-					<div class="col-sm-2">
-						<label class="control-label">
-							Reason For Appointment
-						</label>
-					</div>
-					<div class="col-sm-10">
+				<div class="col-sm-12 input-group">
+					<label class="col-sm-3 control-label">Reason For Appointment</label>
+					<div class="col-sm-9">
 						<input class="form-control" type="text">
 					</div>
 				</div>
