--- a/views/index.jade
+++ b/views/index.jade
@@ -35,66 +35,48 @@ block content
 					| Exchange messages with your provider and conveniently request prescription refills. 
 	.contactUS
 		.myWrapper
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Ryan
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Baha
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Charles
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Rahul
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Abigail
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2 
-							| Amy
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-
-	.footer
-		.myWrapper
+			.row
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Abigail
+							p Graphic designer
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Amy
+							p Graphic designer
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Baha
+							p Graphic designer
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Charles
+							p Graphic designer
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Rahul
+							p Graphic designer
+				.col-sm-2
+					section.profile
+						div.profile-header
+						div.profile-content
+							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
+							h1 Ryan
+							p Graphic designer
+	//- .footer
+	//- 	.myWrapper
