--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -3,15 +3,14 @@ html(ng-app="clientportal")
 	head
 		title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		link(rel='stylesheet', href='/stylesheets/index.css')
+		link(rel='stylesheet', href='/stylesheets/default.css')
 	body(ng-controller="main").swag
 		nav
 			ul.myNav
 				li
 					a(href='/') IST 440W Group 3
 				li
-					a(href='/Dashboard') User Dashboard
+					a(href='/dashboard') User Dashboard
 				li
 					a(href='/logout') Logout
 
