spring break work dawg

--- a/public/scss/_style.scss
+++ b/public/scss/_style.scss
@@ -1,5 +1,5 @@
 body {
-	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 	&.swag {
 		background: url("../images/header.png");
 	}
