--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -41,8 +41,8 @@ block content
 											//- img(src="../images/icons/internet.svg")
 									.panel-body
 										center
-											p= userdata.address[0].streetaddress 
-											p= userdata.address[0].city + ", " + userdata.address[0].state+ " " + userdata.address[0].zip
+											//p= userdata.address[0].streetaddress 
+											//p= userdata.address[0].city + ", " + userdata.address[0].state+ " " + userdata.address[0].zip
 							.col-sm-4
 								.panel.panel-default.cards
 									.panel-heading
