--- a/views/index.jade
+++ b/views/index.jade
@@ -1,150 +1,153 @@
 extends layout
 
 block content
-
 	.headerDiv
 		section
 			h1 Your Health Matters...
 			p Know everything about your health from the comfort of your own home
 			a.btn Find out how
-	.myWrapper
-		.mainInfo
-			.mainContent
-				p
-					img(src="../images/icons/healthy.svg")
-				p
-					| Be able to request appointments and check up on your health
-			.mainContent
-				p
-					img(src="../images/icons/medical-1.svg")
-				p
-					| See all your history and data in one centralized place, including medication, immunizations, etc.
-			.mainContent
-				p
-					img(src="../images/icons/technology.svg")
-				p
-					| Secure access to your personal records
 
-
-	.secondContent
+	.welcomeContent
+		h1 Welcome to the ClientPortal
+			h4 here's everything you need to know
 		.myWrapper
-			.secondDiv
-				h2 We take your health seriously
+			.welcomeInfo
+				h2 Single place for all your medical information
 				p
-					| Manage your personal medical records, communicate with your doctors and make more informed decisions about your health.
-					| This patient portal allows you to view and manage lab orders, test results and upcoming appointments from any internet enabled device.
-					| Exchange messages with your provider and conveniently request prescription refills.
+					| All of your medical information in one place.
+					| No wait. No travel. No Hassle.
+
+			.welcomeImage
+				img(src="../images/showcase.png")
+
+
+	.firstContent
+		.myWrapper
+			h1 ClientPortal provides endless possibilities
+				h4 some of the features include
+				.mainInfo
+					.mainContent
+						p
+							img(src="../images/icons/healthy.svg")
+						p
+							| Be able to request appointments and check up on your latest and previous health information
+					.mainContent
+						p
+							img(src="../images/icons/medical-1.svg")
+						p
+							| See all your history and data in one centralized place, including medication, immunizations, etc.
+					.mainContent
+						p
+							img(src="../images/icons/technology.svg")
+						p
+							| We make it possible to access your personal medical records safely and securely
+
+	.contentTwo
+		.myWrapper
+
+			.divOne
+				figure
+
+			.divTwo
+				h1 We take your health seriously
+				p
+					|This patient portal allows you to view and manage lab orders, test results and upcoming appointments from any internet enabled device.
+					|Exchange messages with your provider and conveniently request prescription refills.
+					|Manage your personal medical records, communicate with your doctors and make more informed decisions about your health.
+				a.btn(href='/login') Login Now
+
+			//.divThree
+			//	h1 test test test
+			//	p testtest
+
+			//.divFour
+			//	h1 test test test
+			//	p testtest
+
+
+	.ourTeam
+		h1 Meet Our Team
+			h4 Feel free to contact us at anytime
+		.myWrapper
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+			.userCard
+				.userContainer
+					.userTop
+					.information
+						img.avatar(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/avatar.png', alt='avatar')
+						.name Baha Baha
+						.position Front-End Dev
+							p Some information about ourselves, and something quirky. i like sushi and shit i guess and fat wheels on brzs
+							| maybe some social media links?
+
+
+			.displayCard
+				.displayContainer
+					.displayTop
+					.information
+						img.displayIcon(src="../images/userIcons/allergies/food.svg")
+						.name Allergy
+						.displayDescription Soy
+							p Some information about soy shit
+
 	.contactUS
+		h1 Contact Us
+			h4 Your input is important to us
 		.myWrapper
-<<<<<<< HEAD
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Ryan
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Baha
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Charles
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Rahul
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Abigail
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
-			.col-sm-4
-				figure.snip1336
-					img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg', alt='sample87')
-					figcaption
-						img.profile(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample4.jpg', alt='profile-sample4')
-						h2
-							| Amy
-							span Engineer
-					p
-						| I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...?
+
 
 	.footer
 		.myWrapper
->>>>>>> 693cb18390cac2031898458b2f079cf3a15c6df3
-=======
-			.row
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Abigail
-							p Graphic designer
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Amy
-							p Graphic designer
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Baha
-							p Graphic designer
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Charles
-							p Graphic designer
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Rahul
-							p Graphic designer
-				.col-sm-2
-					section.profile
-						div.profile-header
-						div.profile-content
-							img(src="http://dir.agosto.nl/dump/Sara.jpg", alt="Portret of Sara Robertson")
-							h1 Ryan
-							p Graphic designer
-	//- .footer
-	//- 	.myWrapper
->>>>>>> 95a830831605372b812a4d3749b9824ee77f4d40
+			section
+				p
+					|Copyright 2016 All Rights Reserved by IST440W TEAM3
+					|PennState Abington
