--- a/views/index.jade
+++ b/views/index.jade
@@ -28,7 +28,7 @@ block content
 				.mainInfo
 					.mainContent
 						p
-							img(src="../images/icons/healthy.svg")
+							span.flaticon-days
 						p
 							| Be able to request appointments and check up on your latest and previous health information
 					.mainContent
@@ -55,15 +55,6 @@ block content
 					|Exchange messages with your provider and conveniently request prescription refills.
 					|Manage your personal medical records, communicate with your doctors and make more informed decisions about your health.
 				a.btn(href='/login') Login Now
-
-			//.divThree
-			//	h1 test test test
-			//	p testtest
-
-			//.divFour
-			//	h1 test test test
-			//	p testtest
-
 
 	.ourTeam
 		h1 Meet Our Team
