--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
 		title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/default.css')
+		link(rel='stylesheet', href='/stylesheets/webfonts/flaticon.css')
+
 	body
 		nav
 			ul.myNav
