--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,5 +1,5 @@
 /*index page style*/
-$myparagraph: 27px;
+$myparagraph: 25px;
 $myshadow: 1px 1px 1px black;
 $myboxshadow: 0 -1px 20px gray; //0 1px 20px gray; for bottom
 $mySpacing: 50px;
@@ -51,14 +51,16 @@ $fourthColor: #909090; //light grey
 		}
 	}
 }
+
 /* underline effect on the nav items */
 /* don't want to underline the logo with blue line*/
+
 .myWrapper {
 	margin: auto;
-	width: 70%;
+	width: 75%;
 	height: 100%;
 }
-//END .myWrapper
+//END myWrapper
 .headerDiv {
 	width: 100%;
 	height: 100vh;
@@ -104,7 +106,7 @@ $fourthColor: #909090; //light grey
 		}
 	}
 }
-// END HEADER
+//END HEADER
 .welcomeContent{
 	width: 100%;
 	background: #fff;
@@ -134,18 +136,18 @@ $fourthColor: #909090; //light grey
 		justify-content: flex-start;
 		align-content: center;
 		align-items: center;
+		//width: 85%;
 	}
 	.welcomeInfo{
-		width: 35%;
+		width: 30%;
 		height: auto;
 	}
 	.welcomeImage{
-		width: 65%;
+		width: 70%;
 		height: auto;
 		img{
 			position: relative;
 			width:100%;
-			height:100%;
 		}
 	}
 }
@@ -154,7 +156,7 @@ $fourthColor: #909090; //light grey
 	height: auto;
 	min-height: 50vh;
 	width: 100%;
-	margin-top: $mySpacing; margin-bottom: $mySpacing;
+	padding-top: $mySpacing; padding-bottom: $mySpacing;
 	.myWrapper{
 		h1{
 			text-align: center;
@@ -173,24 +175,30 @@ $fourthColor: #909090; //light grey
 			width: 100%;
 			margin-top: 5%;
 			img {
-				width: 20%;
+				width: 15%;
 			}
 				.mainContent {
 					width: 30%;
+					margin-right: 1%;
 					text-align: center;
 					transition: all 0.5s ease-out;
-					&::after {
-						content: '';
-						display: block;
-						height: 3px;
-						width: 25%;
-						padding-top: 20px;
-						margin: auto;
-						border-bottom: 3px solid $firstColor;
+					p:nth-of-type(1){
+						&::after {
+							content: '';
+							display: block;
+							height: 3px;
+							width: 7%;
+							padding: 20px 0px 0px 0px;
+							margin: auto;
+							border-bottom: 3px solid $firstColor;
+						}
 					}
 					&:hover {
 						transform: scale(1.1);
 						transition: all 0.2s ease-out;
+						// span{
+						// 	color:red;
+						// }
 					}
 				}
 			}
@@ -213,7 +221,7 @@ $fourthColor: #909090; //light grey
 		justify-content: center;
 		align-items: stretch;
 		align-content: center;
-		.divOne, .divTwo, .divThree, .divFour{
+		.divOne, .divTwo{
 			flex-grow: 1;
 			min-height: 200px;
 			width: 50%;
@@ -270,20 +278,8 @@ $fourthColor: #909090; //light grey
 			}
 		}
 	}
-
 //END contentTwo
 .ourTeam{
-	.myWrapper{
-	display:flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-	.userCard{
-		flex-basis: 30%;
-		height: auto;
-	}
-}
 	h4{
 		&::after {
 		content: '';
@@ -294,10 +290,21 @@ $fourthColor: #909090; //light grey
 		padding-top: 20px;
 		margin-bottom: 20px;
 		border-bottom: 3px solid $thirdColor;
+		}
+	}
+	.myWrapper{
+	display:flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+	.userCard{
+		flex-basis: 30%;
+		height: auto;
+		}
 	}
 }
-}
-
+//END ourTeam
 .contactUS {
 	background: #333333;
 	width: 100%;
@@ -311,8 +318,7 @@ $fourthColor: #909090; //light grey
 		border-top:9em;
 	}
 }
-
-
+//END contactUS
 .footer {
 	width: 100%;
 	height: 20vh;
@@ -332,7 +338,7 @@ $fourthColor: #909090; //light grey
 		font-size: 20px;
 	}
 }
-
+//END footer
 
 
 @media (max-width: 600px) {
