--- a/public/scss/default.scss
+++ b/public/scss/default.scss
@@ -6,9 +6,10 @@
 /*text styles*/
 h1,h2,h3,h4,h5,h6{
 font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
+margin: 0px;
 }
 h1 {
-	margin: 20px 0px;
+	padding: 20px 0px;
 	font-size: 3.5em;
   font-weight: 700;
   color: $thirdColor;
@@ -35,4 +36,9 @@ h4 {
 }
 p{
   font-weight: 400;
+}
+
+span{
+	font-size: 50px;
+	color:$thirdColor;
 }
