--- a/views/index.jade
+++ b/views/index.jade
@@ -28,17 +28,17 @@ block content
 				.mainInfo
 					.mainContent
 						p
-							span.flaticon-days
+							span.flaticon-day
 						p
 							| Be able to request appointments and check up on your latest and previous health information
 					.mainContent
 						p
-							img(src="../images/icons/medical-1.svg")
+							span.flaticon-medical-3
 						p
 							| See all your history and data in one centralized place, including medication, immunizations, etc.
 					.mainContent
 						p
-							img(src="../images/icons/technology.svg")
+							span.flaticon-technology-1
 						p
 							| We make it possible to access your personal medical records safely and securely
 
