--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -182,6 +182,7 @@ $fourthColor: #909090; //light grey
 					margin-right: 1%;
 					text-align: center;
 					transition: all 0.5s ease-out;
+					cursor: pointer;
 					p:nth-of-type(1){
 						&::after {
 							content: '';
@@ -196,9 +197,10 @@ $fourthColor: #909090; //light grey
 					&:hover {
 						transform: scale(1.1);
 						transition: all 0.2s ease-out;
-						// span{
-						// 	color:red;
-						// }
+						span{
+							color:$firstColor;
+							transition: all .5s ease-out;
+						}
 					}
 				}
 			}
@@ -299,8 +301,9 @@ $fourthColor: #909090; //light grey
 	align-items: center;
 	align-content: center;
 	.userCard{
-		flex-basis: 30%;
+		flex-basis:30%;
 		height: auto;
+		margin-right: 10px;
 		}
 	}
 }
