--- a/public/stylesheets/webfonts/_flaticon.scss
+++ b/public/stylesheets/webfonts/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 18/03/2016 01:04
+    Creation date: 25/03/2016 02:45
     */
 
     @font-face {
@@ -36,6 +36,30 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-days:before { content: "\f100"; }
+    .flaticon-arrows:before { content: "\f100"; }
+.flaticon-dark:before { content: "\f101"; }
+.flaticon-day:before { content: "\f102"; }
+.flaticon-medical:before { content: "\f103"; }
+.flaticon-medical-1:before { content: "\f104"; }
+.flaticon-medical-2:before { content: "\f105"; }
+.flaticon-medical-3:before { content: "\f106"; }
+.flaticon-medical-4:before { content: "\f107"; }
+.flaticon-science:before { content: "\f108"; }
+.flaticon-security:before { content: "\f109"; }
+.flaticon-technology:before { content: "\f10a"; }
+.flaticon-technology-1:before { content: "\f10b"; }
+.flaticon-time:before { content: "\f10c"; }
     
-    $font-Flaticon-days: "\f100";
+    $font-Flaticon-arrows: "\f100";
+    $font-Flaticon-dark: "\f101";
+    $font-Flaticon-day: "\f102";
+    $font-Flaticon-medical: "\f103";
+    $font-Flaticon-medical-1: "\f104";
+    $font-Flaticon-medical-2: "\f105";
+    $font-Flaticon-medical-3: "\f106";
+    $font-Flaticon-medical-4: "\f107";
+    $font-Flaticon-science: "\f108";
+    $font-Flaticon-security: "\f109";
+    $font-Flaticon-technology: "\f10a";
+    $font-Flaticon-technology-1: "\f10b";
+    $font-Flaticon-time: "\f10c";
