--- a/public/stylesheets/webfonts/flaticon.css
+++ b/public/stylesheets/webfonts/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 18/03/2016 01:04
+  	Creation date: 25/03/2016 02:45
   	*/
 
 @font-face {
@@ -27,4 +27,16 @@
   font-style: normal;
 }
 
-.flaticon-days:before { content: "\f100"; }
+.flaticon-arrows:before { content: "\f100"; }
+.flaticon-dark:before { content: "\f101"; }
+.flaticon-day:before { content: "\f102"; }
+.flaticon-medical:before { content: "\f103"; }
+.flaticon-medical-1:before { content: "\f104"; }
+.flaticon-medical-2:before { content: "\f105"; }
+.flaticon-medical-3:before { content: "\f106"; }
+.flaticon-medical-4:before { content: "\f107"; }
+.flaticon-science:before { content: "\f108"; }
+.flaticon-security:before { content: "\f109"; }
+.flaticon-technology:before { content: "\f10a"; }
+.flaticon-technology-1:before { content: "\f10b"; }
+.flaticon-time:before { content: "\f10c"; }
