changes to appointments page as well as scss changes

--- a/public/scss/_style.scss
+++ b/public/scss/_style.scss
@@ -2,6 +2,8 @@ body {
 font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 	&.swag {
 		background: url("../images/header.png");
+		position: relative;
+		top: 3em;
 	}
 }
 .modal-backdrop {
@@ -95,6 +97,7 @@ font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 .btn-440w {
 	color: white;
 	background-color: #35A3C5;
+	margin-right: 2.2em;
 	&:hover {
 		color: white;
 		background-color: #A1B4BA;
