--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,8 @@ html
 				//- 	a(href='/register') Register
 		block content
 
-		script(src='javascripts/jquery.js')
-		script(src='javascripts/bootstrap.js')
-		script(src='javascripts/angular.js')
+		//- script(src='javascripts/jquery.js')
+		//- script(src='javascripts/bootstrap.js')
+		//- script(src='javascripts/angular.js')
+		//- script(src='javascripts/ui-bootstrap.js')
+		//- script(src='javascripts/ui-bootstrap-tpls.js')
