--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -3,6 +3,8 @@ html(ng-app="clientportal")
 	head
 		title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+		link(rel='stylesheet', href='/stylesheets/bootstrap-clockpicker.css')
+		link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker.css')
 		link(rel='stylesheet', href='/stylesheets/default.css')
 	body(ng-controller="main").swag
 		nav
@@ -18,6 +20,8 @@ html(ng-app="clientportal")
 
 		script(src='javascripts/jquery.js')
 		script(src='javascripts/bootstrap.js')
+		script(src='javascripts/bootstrap-clockpicker.js')
+		script(src='javascripts/bootstrap-datepicker.js')
 		script(src='javascripts/angular.js')
 		script(src='javascripts/ui-bootstrap.js')
 		script(src='javascripts/ui-bootstrap-tpls.js')
