--- a/public/scss/_cards.scss
+++ b/public/scss/_cards.scss
@@ -184,7 +184,7 @@
 }
 .displayContainer {
   margin: 0 auto;
-  width: 200px;
+  // width: 200px;
   height: 300px;
   background: white;
   border-radius: 6px;
