--- a/public/scss/default.scss
+++ b/public/scss/default.scss
@@ -2,25 +2,30 @@
 @import 'index';
 @import 'cards';
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
-
 /*text styles*/
-h1,h2,h3,h4,h5,h6{
-font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
-margin: 0px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Roboto Condensed', Arial, sans-serif;
+	/*"Lucida Grande"*/
+	margin: 0;
 }
 h1 {
-	padding: 20px 0px;
+	padding: 20px 0;
 	font-size: 3.5em;
-  font-weight: 700;
-  color: $thirdColor;
+	font-weight: 700;
+	color: $thirdColor;
 	text-align: center;
 }
 h2 {
-	margin: 1em 1em;
+	margin: 1em;
 	font-size: 2.8em;
 	font-weight: 700;
 	line-height: 1.1em;
-  color: $thirdColor;
+	color: $thirdColor;
 }
 h3 {
 	margin: 0 0.5em 0.5em;
@@ -31,14 +36,16 @@ h4 {
 	margin: 0 0 2.5em;
 	font-size: 1.8em;
 	font-weight: 400;
-  color: $fourthColor;
+	color: $fourthColor;
 	text-align: center;
 }
-p{
-  font-weight: 400;
+p {
+	font-weight: 400;
 }
-
-span{
-	font-size: 50px;
-	color:$thirdColor;
+span {
+	// font-size: 50px;
+	color: $thirdColor;
+}
+.popover.clockpicker-popover {
+	top: 257.375px !important;
 }
