--- a/public/scss/default.scss
+++ b/public/scss/default.scss
@@ -47,5 +47,9 @@ span {
 	color: $thirdColor;
 }
 .popover.clockpicker-popover {
-	top: 257.375px !important;
+	top: 21em !important;
+}
+
+.datepicker-dropdown {
+    top: 16.7em !important;
 }
