--- a/public/scss/_cards.scss
+++ b/public/scss/_cards.scss
@@ -1,132 +1,3 @@
-// section.profile {
-//   position: relative;
-//   width: 200px;
-//   border: 1px solid #171a1f;
-//   border-radius: 8px;
-//   text-transform: uppercase;
-//
-//   &::after {
-//     display: block;
-//     position: absolute;
-//     top: 100%;
-//     left: 3%;
-//     z-index: -1;
-//     width: 94%;
-//     height: 1px;
-//     box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
-//     content: '';
-//   }
-//   ul {
-//     display: flex;
-//     margin: 0;
-//     padding: 0;
-//     border-top: 1px solid #171a1f;
-//     border-radius: 0 0 7px 7px;
-//     list-style: none;
-//     background: #2f363e;
-//
-//     li {
-//       display: flex;
-//       flex: 0 1 50%;
-//       justify-content: center;
-//       align-items: center;
-//       border-top: 1px solid #3e424d;
-//       padding: 20px 10px;
-//       color: #c54b30; // 8a8a8a
-//       font-weight: 600;
-//       font-size: 1.2em;
-//
-//       & + li {
-//         border-left: 1px solid #171a1f;
-//         box-shadow: -1px 0 0 #3e424d;
-//       }
-//     }
-//
-//     span {
-//       display: inline-block;
-//       margin-left: 0.4em;
-//       color: #a9a9a9;
-//       font-weight: 300;
-//       font-size: 0.8em;
-//     }
-//   }
-// }
-//
-// .profile-header {
-//   height: 85px;
-//   border-radius: 7px 7px 0 0;
-//   overflow: hidden;
-//   background: #00BBFF;
-//
-//   img {
-//     object-fit: cover;
-//   }
-// }
-//
-// .profile-content {
-//   padding: 0 30px 30px;
-//   border-radius: 0 0 5px 5px;
-//   color: #e7e0cf;
-//   text-align: center;
-//   background: #2f363e;
-//
-//   img {
-//     $image-size: 150px;
-//     margin-top: (0 - ($image-size / 2));
-//     width: $image-size;
-//     height: $image-size;
-//     border-radius: 100%;
-//   }
-//
-//   h1 {
-//     margin: 25px 0 0;
-//     font-size: 1.4em;
-//     font-weight: 200;
-//     letter-spacing: 0.05em;
-//   }
-//
-//   p {
-//     margin: 5px 0 0;
-//     color: #b49e6b;
-//     font-size: 0.8125em;
-//     font-weight: 200;
-//   }
-//   button {
-//     margin-top: 25px;
-//     padding: 10px 20px;
-//     min-width: 160px;
-//     background: #c54b30;
-//     border: 1px solid #171c22;
-//     border-radius: 4px;
-//     box-shadow: inset 0 1px 0 0 #d16e59;
-//     color: #e7e0cf;
-//     font-family: inherit;
-//     font-size: 0.8em;
-//     font-weight: 600;
-//     text-shadow: 0 1px 1px rgba(0, 0, 0, .25);
-//     transition: background ease-out 0.15s;
-//
-//     &:hover,
-//     &:focus {
-//       background: darken(#c54b30, 6%);
-//     }
-//
-//     &:focus {
-//       outline: none;
-//       box-shadow:
-//         inset 0 1px 0 0 #d16e59,
-//         0 0 0 3px #e7e0cf;
-//     }
-//
-//     &:active {
-//       background: darken(#c54b30, 12%);
-//       transition: none;
-//     }
-//   }
-// }
-
-
-
 .userCard {
   color: #303336;
   padding: 40px 0;
@@ -184,11 +55,14 @@
 }
 .displayContainer {
   margin: 0 auto;
-  // width: 200px;
-  height: 300px;
+  height: 18em;
   background: white;
   border-radius: 6px;
   position: relative;
+  &:hover {
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      top: -5px;
+  }
   .displayTop{
     width: 100%;
     height: 100px;
