--- a/public/scss/_cards.scss
+++ b/public/scss/_cards.scss
@@ -64,7 +64,7 @@ $green: #27b534;
 }
 .displayContainer {
   margin: 0 auto;
-  height: 12em;
+  height: 340px;
   background: white;
   border-radius: 6px;
   position: relative;
@@ -86,15 +86,15 @@ $green: #27b534;
   }
   .information {
     text-align: center;
+    margin-top: -20px;
   }
   .displayIcon {
-    margin: 0 auto;
     margin: -60px auto 15px;
     padding: 10px;
     display: block;
     width: 75px;
     height: 75px;
-    border-radius: 50%;
+    border-radius: 100%;
     border: solid 10px $red;
     background-color: white;
     img{
@@ -108,19 +108,29 @@ $green: #27b534;
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto;
       border-bottom: 3px solid $red;
     }
   }
   .displayDescription {
-    font-size: 22px;
-    color: #69727e;
-    margin-bottom: 24px;
-    p{
-      padding-top: 10px;
+    color: #909090;
+    //margin-bottom: 24px;
+    h1{
+      padding:10px;
+      font-weight: 400;
       text-align: center;
+      font-size: 23px;
+    }
+    h2{
+      font-size: 20px;
+      margin: 0px;
+      margin-top: 10px;
+      font-weight: 400;
+    }
+    h2:last-of-type{
       font-size: 18px;
+      padding: 0px 10px;
     }
   }
 }
