--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -47,7 +47,7 @@
 
 .displayContainer {
   margin: 0 auto;
-  height: 12em;
+  height: 340px;
   background: white;
   border-radius: 6px;
   position: relative;
@@ -66,15 +66,15 @@
     text-align: center;
     color: white; }
   .displayContainer .information {
-    text-align: center; }
+    text-align: center;
+    margin-top: -20px; }
   .displayContainer .displayIcon {
-    margin: 0 auto;
     margin: -60px auto 15px;
     padding: 10px;
     display: block;
     width: 75px;
     height: 75px;
-    border-radius: 50%;
+    border-radius: 100%;
     border: solid 10px #fc3131;
     background-color: white; }
     .displayContainer .displayIcon img {
@@ -86,17 +86,24 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto;
       border-bottom: 3px solid #fc3131; }
   .displayContainer .displayDescription {
-    font-size: 22px;
-    color: #69727e;
-    margin-bottom: 24px; }
-    .displayContainer .displayDescription p {
-      padding-top: 10px;
+    color: #909090; }
+    .displayContainer .displayDescription h1 {
+      padding: 10px;
+      font-weight: 400;
       text-align: center;
-      font-size: 18px; }
+      font-size: 23px; }
+    .displayContainer .displayDescription h2 {
+      font-size: 20px;
+      margin: 0px;
+      margin-top: 10px;
+      font-weight: 400; }
+    .displayContainer .displayDescription h2:last-of-type {
+      font-size: 18px;
+      padding: 0px 10px; }
 
 body {
   font-family: 'Roboto Condensed', Arial, sans-serif;
@@ -208,8 +215,10 @@ body {
     text-decoration: none;
     padding: 0 1em; }
   .myNav li {
-    margin: 10px;
-    list-style-type: none; }
+    margin: 10px 0 0 0;
+    list-style-type: none;
+    border-bottom: solid 3px transparent;
+    transition: all 0.4s ease-out; }
     .myNav li:first-child {
       margin-right: auto; }
     .myNav li::after {
@@ -217,13 +226,15 @@ body {
       display: block;
       height: 3px;
       width: 0; }
-    .myNav li:hover:after {
-      width: 100%;
-      background: #00B7FF;
-      transition: width 0.4s ease-out; }
-    .myNav li:first-child:hover:after {
+    .myNav li:hover {
+      border-bottom: 3px solid #00B7FF;
+      transition: all 0.4s ease-out; }
+    .myNav li:first-child:hover {
       margin-right: auto;
-      background: none; }
+      background: none;
+      border-bottom: none; }
+    .myNav li:last-child {
+      margin-right: 50px; }
 
 /* underline effect on the nav items */
 /* don't want to underline the logo with blue line*/
@@ -235,7 +246,7 @@ body {
   width: 100%;
   height: 100vh;
   min-height: 800px;
-  background: url("../images/Header.jpg") top center;
+  background: url("../images/Header.jpg") top center fixed;
   background-size: cover;
   padding: 0;
   display: inline-block;
@@ -530,7 +541,7 @@ body {
 
 .displayContainer {
   margin: 0 auto;
-  height: 12em;
+  height: 340px;
   background: white;
   border-radius: 6px;
   position: relative;
@@ -549,15 +560,15 @@ body {
     text-align: center;
     color: white; }
   .displayContainer .information {
-    text-align: center; }
+    text-align: center;
+    margin-top: -20px; }
   .displayContainer .displayIcon {
-    margin: 0 auto;
     margin: -60px auto 15px;
     padding: 10px;
     display: block;
     width: 75px;
     height: 75px;
-    border-radius: 50%;
+    border-radius: 100%;
     border: solid 10px #fc3131;
     background-color: white; }
     .displayContainer .displayIcon img {
@@ -569,17 +580,24 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto;
       border-bottom: 3px solid #fc3131; }
   .displayContainer .displayDescription {
-    font-size: 22px;
-    color: #69727e;
-    margin-bottom: 24px; }
-    .displayContainer .displayDescription p {
-      padding-top: 10px;
+    color: #909090; }
+    .displayContainer .displayDescription h1 {
+      padding: 10px;
+      font-weight: 400;
       text-align: center;
-      font-size: 18px; }
+      font-size: 23px; }
+    .displayContainer .displayDescription h2 {
+      font-size: 20px;
+      margin: 0px;
+      margin-top: 10px;
+      font-weight: 400; }
+    .displayContainer .displayDescription h2:last-of-type {
+      font-size: 18px;
+      padding: 0px 10px; }
 
 /*text styles*/
 h1,
