--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -28,7 +28,19 @@ block content
 				.tab-content
 					#overview.tab-pane.fade.in.active
 						.col-sm-12
-
+							.col-sm-3
+								.displayCard
+									.displayContainer
+										.displayTop
+										.displayIcon
+										.information
+											.name firstname
+											.displayDescription
+												h1 Name of meds
+												h2 Dosage
+												h2 Frequency
+												h2 DateStart DateEnd
+												h2 Description about some soy shit here mayne. Lets go Sushiiiing dawg we out 
 
 
 					#profilepage.tab-pane.fade.in
