--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -29,8 +29,10 @@ $fourthColor: #909090; //light grey
 		padding: 0 1em;
 	}
 	li {
-		margin: 10px;
+		margin: 10px 0 0 0;
 		list-style-type: none;
+		border-bottom: solid 3px transparent;
+		transition: all 0.4s ease-out;
 		&:first-child {
 			margin-right: auto;
 		}
@@ -40,14 +42,17 @@ $fourthColor: #909090; //light grey
 			height: 3px;
 			width: 0;
 		}
-		&:hover:after {
-			width: 100%;
-			background: #00B7FF;
-			transition: width 0.4s ease-out;
+		&:hover {
+			border-bottom: 3px solid $firstColor;
+			transition: all 0.4s ease-out;
 		}
-		&:first-child:hover:after {
+		&:first-child:hover {
 			margin-right: auto;
 			background: none;
+			border-bottom: none;
+		}
+		&:last-child{
+			margin-right: 50px;
 		}
 	}
 }
@@ -65,7 +70,7 @@ $fourthColor: #909090; //light grey
 	width: 100%;
 	height: 100vh;
 	min-height: 800px;
-	background: url("../images/Header.jpg") top center;
+	background: url("../images/Header.jpg") top center fixed;
 	background-size: cover;
 	padding: 0;
 	display: inline-block;
